# est-synthesizer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  debug_qdrant.py  docker-compose.yml  full_dev_plan.md  litellm_proxy.yaml  pyproject.toml  run.py  stub_generator.py
backend/: .env.example  __init__.py  requirements.txt
backend/app/: config.py  logging_config.py  main.py
backend/app/api/: feedback.py  generate.py  progress.py
backend/app/blueprint/: default.py
backend/app/generation/: assembler.py  caller.py  client.py  constants.py  exceptions.py  few_shot.py  loop.py  mistral.py  prompts.py  validator.py
backend/app/pdf/: renderer.py
backend/app/routes/: __init__.py  blueprints.py  scraper.py
backend/app/schemas/: __init__.py  enums.py  feedback.py  job.py  llm.py  models.py  passage.py  question.py  test.py
backend/app/scraper/: __init__.py  constants.py  gutenberg.py  processor.py
backend/app/static/: blueprint-editor.html
backend/app/storage/: __init__.py  blueprints.py  db.py  feedback.py  jobs.py  qdrant.py  schema_diagram.drawio  sqlite.py  tests.py
backend/scripts/: bootstrap_library.py  generate_test.py
backend/tests/: conftest.py  test_generation.py
docs/: api.md
docs/diagrams/: bootstrap-pipeline.drawio
docs/est-samples/: README.md
docs/postman/: EST_Synthesizer.postman_collection.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  index.jsx
scripts/: bootstrap_library.py  extract_samples.py  generate_test.py  qdrant_tool.py  test_real_call.py
scripts/bootstrap/: stats.py
(+39 files in other folders)
