[project]
name = "est-synthesizer"
version = "0.1.0"
description = "EST Synthesizer - Educational test generation pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sentence-transformers>=3.0.0",
    "litellm>=1.0.0",
    "qdrant-client>=1.0.0",
    "aiosqlite>=0.19.0",
    "weasyprint>=60.0",
    "scrapling>=0.1.0",
    "sse-starlette>=1.6.0",
    "tenacity>=8.2.0",
    "aiolimiter>=1.1.0",
    "uvicorn>=0.23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:cannot collect test class.*__init__:pytest.PytestCollectionWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
